# coursework5

./: .gitignore  README.md  main.py  pyproject.toml  user_interaction.py
sql/: db_filler.py  db_manager.py
src/: hh_vacancies.py
